--- a/odd-bot-out/index.html
+++ b/odd-bot-out/index.html
@@ -8,13 +8,13 @@
     <meta name="keywords" content="odd bot out, odd bot out unblocked, unblocked games, play odd bot out online, puzzle unblocked games, robot puzzle game, odd bot out browser game, free unblocked games, logic games online, odd bot out full screen">
     <link rel="canonical" href="https://onlyszgames.github.io/odd-bot-out/" />
     <meta name="robots" content="index, follow">
-    <meta name="author" content="Only Sz Games">
+    <meta name="author" content="FAF Games">
     <meta property="og:title" content="Odd Bot Out Unblocked ~» A Unique Puzzle Escape" />
     <meta property="og:description" content="Odd Bot Out Unblocked is a charming physics-puzzler. You are a bot who failed a test. Help this 'odd' bot escape the factory by solving 100 unique puzzle rooms." />
     <meta property="og:url" content="https://onlyszgames.github.io/odd-bot-out/" />
     <meta property="og:image" content="https://szgames.github.io/img/odd-bot-out.png" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Only Sz Games" />
+    <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@SZGames">
     <meta name="twitter:title" content="Odd Bot Out Unblocked | OnlySzGames">
@@ -392,7 +392,7 @@ justify-content: center;}
     <header>
        <div class="container header-content">
             <a href="/" class="logo">
-                Only Sz Games
+                FAF Games
             </a>
             <nav class="main-nav">
                 <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
@@ -467,7 +467,7 @@ justify-content: center;}
         <div class="game-description">
             <img src="https://szgames.github.io/img/odd-bot-out.png" alt="Odd Bot Out
 Gameplay" class="game-description-image" title="Odd Bot Out">
-            <h2>🤖 About Odd Bot Out</h2><p>Odd Bot Out is a beautiful and clever physics-based puzzle-platformer. You play as 'Odd', a small yellow robot who fails a standardization test and is thrown into the factory's recycling area. Your goal is to help Odd escape by navigating 100 unique and challenging puzzle rooms. The game is known for its charming art style, inventive puzzles, and endearing main character. Odd Bot Out Unblocked is a smart, relaxing, and highly creative game that will make you think.</p><h2>✨ Game Features Odd Bot Out</h2><p>The core feature of Odd Bot Out is its physics-based puzzles. Odd cannot jump very high, so you must manipulate the environment. You can drag and stack blocks to build stairs, or plug your bot into sliders to move platforms. A key mechanic is the ability to attach your bot's 'legs' to certain objects, allowing you to walk on ceilings or control other robots. Each of the 100 rooms is a new, self-contained puzzle. Odd Bot Out Unblocked is a game of experimentation and logic, with no timers or enemies.</p><h3>Puzzle-Solving Tips</h3><ul><li>Look Around: Analyze all the movable parts in the room.</li><li>Build: Use the yellow blocks to create steps or bridges.</li><li>Use Other Bots: Sometimes you need to move other, larger robots to press buttons.</li><li>Think Vertically: Remember that your bot can often walk on walls or ceilings.</li></ul><h2>🕹️ How to Play Odd Bot Out</h2><p>Playing Odd Bot Out is simple. Use the Arrow keys to make Odd walk left and right. Press the Up Arrow to make Odd 'jump' or extend its legs. To interact with objects like blocks or sliders, simply walk into them and Odd will push or connect automatically. You can also click and drag some yellow blocks with your mouse to reposition them. Your goal in each room is to get Odd to the exit door. This may involve building a staircase, moving a platform, or using another robot to open a path. Odd Bot Out Unblocked is a delightful journey of logical problem-solving.</p>
+            <h2>🤖 About Odd Bot Out</h2><p>Odd Bot Out is a beautiful and clever physics-based puzzle-platformer. You play as Odd, a small yellow robot who fails a standardization test and ends up in the factory's recycling area. Your goal is to help Odd escape by navigating 100 unique and challenging puzzle rooms. Known for its charming art style, inventive puzzles, and lovable main character, Odd Bot Out Unblocked is one of the most creative unblocked games on github.io a smart, relaxing, and thought-provoking adventure that’s perfect for all ages.</p><h2>✨ Game Features Odd Bot Out</h2><p>The core feature of Odd Bot Out is its creative, physics-based puzzles. Since Odd cannot jump very high, you must manipulate the environment to progress. Drag and stack blocks to build stairs, or plug your bot into sliders to move platforms. A key mechanic is attaching your bot's ‘legs’ to certain objects, allowing you to walk on ceilings or control other robots. Each of the 100 rooms is a fresh, self contained challenge. Odd Bot Out Unblocked on github.io is one of the most unique unblocked games, focused on experimentation, creativity, and logic with no timers, no enemies, and plenty of fun!</p><h3>Puzzle-Solving Tips</h3><ul><li>Look Around: Analyze all the movable parts in the room.</li><li>Build: Use the yellow blocks to create steps or bridges.</li><li>Use Other Bots: Sometimes you need to move other, larger robots to press buttons.</li><li>Think Vertically: Remember that your bot can often walk on walls or ceilings.</li></ul><h2>🕹️ How to Play Odd Bot Out</h2><p>Playing Odd Bot Out is simple and fun. Use the Arrow keys to move Odd left or right, and press the Up Arrow to make Odd ‘jump’ or extend its legs. To interact with objects like blocks or sliders, just walk into them Odd will push or connect automatically. You can also click and drag certain yellow blocks with your mouse to reposition them. The goal in each room is to guide Odd to the exit door by building stairs, moving platforms, or using other robots to clear the path. Odd Bot Out Unblocked on github.io is one of the most enjoyable unblocked games, offering a relaxing journey of creativity and logical problem-solving.</p>
             <div class="game-features">
                 <h3>Categories</h3>
                 <div class="game-category-tags">
@@ -696,8 +696,8 @@ class="category-tag-item" style="background-color: #2962FF;">
         <div class="container">
    <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Only Sz Games</h3>
-                    <p>Looking for your favorite Only Sz Games? Play them all right here, completely unblocked, even at school or work. Just click and play instantly—no downloads required.</p>
+                    <h3>FAF Games</h3>
+                    <p>Looking for your favorite FAF? Play them all right here, completely unblocked, even at school or work. Just click and play instantly—no downloads required.</p>
                     <div class="social-icons">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -709,7 +709,7 @@ class="category-tag-item" style="background-color: #2962FF;">
 
             <div class="footer-bottom">
                 <p>&copy;
-<span id="currentYear"></span> Only Sz Games. All rights reserved.</p>
+<span id="currentYear"></span> FAF Games. All rights reserved.</p>
                 <div class="footer-links">
                     <a href="/privacy-policy">Privacy Policy</a>
                     <a href="/contact">Contact Us</a>
