--- a/odd-bot-out/index.html
+++ b/odd-bot-out/index.html
@@ -697,7 +697,7 @@ class="category-tag-item" style="background-color: #2962FF;">
    <div class="footer-content">
                 <div class="footer-section">
                     <h3>FAF Games</h3>
-                    <p>Looking for your favorite FAF? Play them all right here, completely unblocked, even at school or work. Just click and play instantly—no downloads required.</p>
+                    <p>Looking for your favorite FAF Games? Play them all right here, completely unblocked, even at school or work. Just click and play instantly no downloads required.</p>
                     <div class="social-icons">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
