--- a/level-devil/index.html
+++ b/level-devil/index.html
@@ -8,13 +8,13 @@
     <meta name="keywords" content="level devil, level devil unblocked, puzzle game, platformer, horror, troll game, hard game, rage game">
     <link rel="canonical" href="https://onlyonlyszgames.github.io/level-devil/" />
     <meta name="robots" content="index, follow">
-    <meta name="author" content="Only Sz Games">
+    <meta name="author" content="FAF Games">
     <meta property="og:title" content="Level Devil Unblocked ~» The Unfair Platformer" />
     <meta property="og:description" content="Level Devil Unblocked is a "troll" platformer. The game lies to you. Floors collapse, spikes appear, and the exit kills you. Memorize the traps to win." />
     <meta property="og:url" content="https://onlyonlyszgames.github.io/level-devil/" />
     <meta property="og:image" content="https://onlyonlyszgames.github.io/img/level-devil.png" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Only Sz Games" />
+    <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@SZGames">
     <meta name="twitter:title" content="Level Devil Unblocked ~» The Unfair Platformer">
@@ -393,7 +393,7 @@ justify-content: center;}
     <header>
        <div class="container header-content">
             <a href="/" class="logo">
-                Only Sz Games
+                FAF Games
             </a>
             <nav class="main-nav">
                 <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
@@ -431,8 +431,8 @@ justify-content: center;}
         </div>
     </header>
         <div class="game-header" style="background-color: #c5e1a5;">
-            <h1>Level Devil</h1>
-            <p>Warning: Level Devil Unblocked is not a fair game. This is a "troll" or "rage" game. The rules are lies, the ground will collapse, and spikes will appear from nowhere. Your goal is to reach the end, but the game will try to trick you in every possible way.</p>
+            <h1>Level Devil Play Unblocked Games Online on GitHub.io</h1>
+            <p>Level Devil Unblocked is one of the most challenging unblocked games on github.io, built to test your patience and reflexes. This isn’t a fair game it’s a wild “troll” or “rage” platformer where nothing is as it seems. The ground may collapse, spikes appear from nowhere, and every step hides a surprise. Your mission is to reach the end, but beware Level Devil will do everything it can to trick you, making it a hilarious and addictive experience for fans of tricky unblocked games!</p>
         </div>
 
         <div class="star-rating-container" data-game-id="level-devil">
@@ -465,7 +465,7 @@ justify-content: center;}
         <div class="game-description">
             <img src="https://onlyonlyszgames.github.io/img/level-devil.png" alt="Level Devil
 Gameplay" class="game-description-image" title="Level Devil">
-            <h2>😈 About Level Devil</h2><p>Level Devil is a notorious puzzle-platformer that falls into the 'troll' or 'rage game' category. It looks like a simple, innocent platformer, but it is designed to be unfair, deceptive, and frustrating in a humorous way. The game's objective is to get your character to the door at the end of each level. However, the levels are filled with hidden traps. The ground will disappear, spikes will pop out of safe-looking blocks, and the goal itself might be a trap. Level Devil Unblocked is a test of memory and patience, not just skill.</p><h2>✨ Game Features Level Devil</h2><p>The main feature of Level Devil is its subversive design. The game actively lies to the player. A sign pointing 'safe' will lead you into a trap. A coin might be bait. The challenge comes from trial and error. You will die, and you will die a lot. But each death teaches you about a new, hidden trap. The satisfaction comes from finally outsmarting the level's creator and memorizing the one, true, safe path. Level Devil Unblocked is a minimalist game that creates a 'horror' feel through pure psychological tension and jump-scares.</p><h3>How to Survive</h3><ul><li>Trust Nothing: Do not trust signs, coins, or even solid ground.</li><li>Memorize Everything: When you die, remember exactly what killed you.</li><li>Be Patient: Do not rush. Move slowly and test the ground ahead of you.</li><li>Laugh it Off: The game is designed to make you fail. The fun is in the absurdity.</li></ul><h2>🕹️ How to Play Level Devil</h2><p>The controls in Level Devil are basic platformer controls. Use A and D or Left/Right Arrow keys to move, and W or Up Arrow to jump. Your goal is to touch the door at the end of the level. However, as you move, traps will be sprung. For example, a seemingly normal patch of floor might give way, dropping you onto spikes. Or, jumping under a block might cause it to fall and crush you. You must play, die, restart, and memorize the sequence of traps to beat each level. Playing Level Devil Unblocked is a battle of wits against the game developer themselves.</p>
+            <h2>😈 About Level Devil Play Unblocked Games on GitHub.io</h2><p>Level Devil Unblocked is a notorious puzzle-platformer that belongs to the troll or rage game genre. At first glance, it looks like a simple, innocent platformer, but don’t be fooled it’s designed to challenge your patience and sense of humor. The goal is to guide your character safely to the door at the end of each level. However, hidden traps are everywhere floors disappear, spikes pop out of nowhere, and even the finish line might be a trick. Among all unblocked games on github.io, Level Devil stands out for its creative design, testing your memory, timing, and calm under pressure.</p><h2>✨ Game Features Level Devil Unblocked</h2><p>The charm of Level Devil lies in its deceptive and clever level design. This game doesn’t just challenge your reflexes it challenges your expectations.</p><h3>How to Survive in Level Devil</h3><ul><li>Trust Nothing: Don’t believe the signs or your instincts they’ll trick you.</li><li>Memorize Everything: Every trap teaches you something new.</li><li>Be Patient: Rushing will only lead to failure.</li><li>Enjoy the Chaos: The fun lies in laughing at how unfair it gets.</li></ul><h2>🕹️ How to Play Level Devil Unblocked</h2><p>Playing Level Devil Unblocked is simple in controls but tricky in experience. You can move your character using the A and D keys or the Left and Right Arrow keys, and press W or the Up Arrow to jump. Your main goal is to reach the door at the end of each level, but beware this game is full of hidden surprises. The floor might collapse beneath you, spikes could appear out of nowhere, or falling blocks may suddenly drop from above. Each time you fail, you’ll learn something new about the level’s layout. Progress in Level Devil, available among the best unblocked games on github.io, depends on observation, patience, and quick reflexes. Keep practicing, memorize the traps, and enjoy the thrill of overcoming each deceptive challenge.</p>
             <div class="game-features">
                 <h3>Categories</h3>
                 <div class="game-category-tags">
@@ -699,8 +699,8 @@ class="category-tag-item" style="background-color: #2962FF;">
         <div class="container">
    <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Only Sz Games</h3>
-                    <p>Looking for your favorite Only Sz Games? Play them all right here, completely unblocked, even at school or work. Just click and play instantly—no downloads required.</p>
+                    <h3>FAF Games</h3>
+                    <p>Looking for your favorite FAF Games? Play them all here fully unblocked games you can enjoy anytime, even at school or work. Just click, load, and start playing instantly no downloads, no limits, just pure fun!</p>
                     <div class="social-icons">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -712,7 +712,7 @@ class="category-tag-item" style="background-color: #2962FF;">
 
             <div class="footer-bottom">
                 <p>&copy;
-<span id="currentYear"></span> Only Sz Games. All rights reserved.</p>
+<span id="currentYear"></span> FAF Games. All rights reserved.</p>
                 <div class="footer-links">
                     <a href="/privacy-policy">Privacy Policy</a>
                     <a href="/contact">Contact Us</a>
