--- a/level-devil/index.html
+++ b/level-devil/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Level Devil Unblocked | OnlySZGames</title>
+    <title>Play Level Devil Unblocked Online | GitHub.io Games</title>
     <meta name="description" content="Level Devil Unblocked is a "troll" platformer. The game lies to you. Floors collapse, spikes appear, and the exit kills you. Memorize the traps to win.">
     <meta name="keywords" content="level devil, level devil unblocked, puzzle game, platformer, horror, troll game, hard game, rage game">
     <link rel="canonical" href="https://onlyonlyszgames.github.io/level-devil/" />
