--- a/level-devil/index.html
+++ b/level-devil/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Play Level Devil Unblocked Online | GitHub.io Games</title>
-    <meta name="description" content="Level Devil Unblocked is a "troll" platformer. The game lies to you. Floors collapse, spikes appear, and the exit kills you. Memorize the traps to win.">
-    <meta name="keywords" content="level devil, level devil unblocked, puzzle game, platformer, horror, troll game, hard game, rage game">
+    <meta name="description" content="Play Level Devil Unblocked online on GitHub.io a fun and challenging rage platformer full of hidden traps and surprises. Test your skills, avoid spikes, and outsmart every level in one of the most addictive unblocked games you can play anywhere!">
+    <meta name="keywords" content="level devil, level devil unblocked, level devil game, unblocked games, play unblocked games, level devil github, level devil online, rage games unblocked, troll platformer, github.io unblocked games">
     <link rel="canonical" href="https://onlyonlyszgames.github.io/level-devil/" />
     <meta name="robots" content="index, follow">
     <meta name="author" content="FAF Games">
