--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ class="logo">
     <div class="container">
        <!-- ✅ Hero Section -->
 <div class="hero-header">
-  <h1>🎮 Play the Best <span>Unblocked Games</span> Online on GitHub.io at FAF Games</h1>
+  <h1>🎮 Play <span>Unblocked Games Online on GitHub.io</span> </h1>
   <p>
     Welcome to <strong>FAF Games</strong>, your ultimate destination to play the  
     <b>best unblocked games online on GitHub.io</b>, anytime, anywhere! Whether you're at school, work, or just relaxing at home, our platform lets you enjoy your favorite games without any restrictions or downloads.  
