--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Github.io Games | Play Unblocked Games For Free</title>
-    <meta name="description" content="FAF Games is your premium portal for top unblocked games. Instantly play favorites like Shell Shockers, Minecraft Classic, and Slope online. Free browser gaming for everyone.">
-    <meta name="keywords" content="FAF Games, unblocked games, free online games, browser games, play unblocked, 1v1.lol, slope, minecraft classic, shell shockers, games at school">
+    <title>FAF Games – Best Unblocked Games on GitHub.io</title>
+    <meta name="description" content="Play the best unblocked games on GitHub.io at FAF Games. Enjoy free browser games anywhere school, work, or home with no downloads or restrictions!">
+    <meta name="keywords" content="unblocked games, github.io, FAF Games, free browser games, play unblocked games online, github.io games, school-friendly games, online unblocked games">
     <link rel="canonical" href="https://onlyszgames.github.io/" />
     <meta name="robots" content="index, follow">
     <meta name="author" content="FAF Games">
