--- a/flip-bros/index.html
+++ b/flip-bros/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flip Bros Unblocked</title>
-    <meta name="description" content="Flip Bros Unblocked is a wild physics-based platformer. Control your 'Bro' and use a unique jump-and-flip mechanic to stomp on enemies and clear levels.">
-    <meta name="keywords" content="flip bros, flip bros unblocked, platformer, physics game, action game, skill game, 2d game">
+    <title>FAF Games | Play Free Physics Platformer Game Online on GitHub.io</title>
+    <meta name="description" content="Play Flip Bros Unblocked, a free physics-based action platformer where you flip, jump, and stomp enemies. Enjoy this fun unblocked game instantly on GitHub.io..">
+    <meta name="keywords" content="Flip Bros Unblocked, unblocked games, GitHub.io games, online platformer, physics game, free browser games, play at school, action games unblocked">
     <link rel="canonical" href="https://onlyszgames.github.io/flip-bros" />
     <meta name="robots" content="index, follow">
-    <meta name="author" content="Only Sz Games">
+    <meta name="author" content="FAF Games">
     <meta property="og:title" content="Flip Bros Unblocked ~» Jump, Flip, Stomp!" />
     <meta property="og:description" content="Flip Bros Unblocked is a wild physics-based platformer. Control your 'Bro' and use a unique jump-and-flip mechanic to stomp on enemies and clear levels." />
     <meta property="og:url" content="https://onlyszgames.github.io/flip-bros" />
     <meta property="og:image" content="https://onlyszgames.github.io/img/flip-bros.png" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Only Sz Games" />
+    <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@SZGames">
     <meta name="twitter:title" content="Flip Bros Unblocked ~» Jump, Flip, Stomp!">
@@ -392,7 +392,7 @@ justify-content: center;}
     <header>
        <div class="container header-content">
             <a href="/" class="logo">
-                Only Sz Games
+                FAF Games
             </a>
             <nav class="main-nav">
                 <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
@@ -433,8 +433,8 @@ justify-content: center;}
     <div class="container">
 
         <div class="game-header" style="background-color: #F4511E;">
-            <h1>Flip Bros</h1>
-            <p>Get ready to flip in Flip Bros Unblocked! This is a unique and challenging action-platformer. Your goal is to defeat all the enemies in the level by stomping on them. The catch? Your 'Bro' moves by flipping and jumping, using momentum to win.</p>
+            <h1>🌀 Flip Bros Unblocked Play Free Online on GitHub.io</h1>
+            <p>Flip Bros Unblocked is a fast-paced, physics-based action platformer that challenges your timing, precision, and creativity. In this hilarious yet addictive game, your mission is simple flip, jump, and stomp every enemy in your way. The twist? Your character doesn’t walk or run; instead, you must use flips and momentum to move and fight. Every level tests your control as you master the unique physics that make Flip Bros both funny and frustratingly fun!</p>
         </div>
 
         <div class="star-rating-container" data-game-id="flip-bros">
@@ -465,7 +465,9 @@ justify-content: center;}
         <div class="game-description">
             <img src="https://onlyszgames.github.io/img/flip-bros.png" alt="Flip Bros
 Gameplay" class="game-description-image" title="Flip Bros">
-            <h2>🤸‍♂️ About Flip Bros</h2><p>Flip Bros is an original and challenging physics-based action-platformer. You control a 'Bro' whose movement is... unique. Instead of walking, you move by flipping and jumping. The goal in each level is to defeat all the enemies by landing on their heads. This is harder than it sounds, as you must use your flipping momentum to aim your landings. Flip Bros Unblocked is a quirky, skill-based game that feels like a fresh take on the classic 'stomp-em-up' formula.</p><h2>✨ Game Features Flip Bros</h2><p>The core feature of Flip Bros is its unconventional control-scheme. You have two buttons: one to flip left, and one to flip right. Pressing both at the same time makes you jump. Mastering this 'flip-jump' mechanic is the key to the game. You must learn how to control your arc and momentum to land precisely on enemy heads. The levels are single-screen arenas filled with different enemy types and platforms. Flip Bros Unblocked is a game about mastering a difficult but satisfying set of physics-based moves.</p><h3>Flipping Techniques</h3><ul><li>Basic Jump: Press both flip buttons to jump straight up.</li><li>Directed Jump: Press and hold one flip button, then tap the other to jump in that direction.</li><li>Mid-Air Control: You can slightly alter your trajectory by flipping in the air.</li><li>Stomping: The goal is to land on an enemy's head. This will also bounce you back up, allowing for chain-stomps.</li></ul><h2>🕹️ How to Play Flip Bros</h2><p>To play Flip Bros, you use two keys (or on-screen buttons). Let's say 'A' flips you left and 'D' flips you right. Pressing 'A' or 'D' will make your character do a backflip in that direction. Pressing 'A' and 'D' together will make your character jump. Your goal is to navigate the level and land directly on top of every enemy. Once all enemies are defeated, you move to the next level. Be careful not_ to touch an enemy from the side, as this will hurt you. Flip Bros Unblocked is a pure test of motor skills and physics mastery.</p>
+            <h2>🤸‍♂️ About Flip Bros</h2><p>Flip Bros is a creative and unconventional 2D platformer where your movement depends entirely on flips. Rather than traditional controls, your “Bro” somersaults through the level, bouncing off walls, floors, and enemies to survive. The goal in each stage is to defeat all enemies by landing precisely on their heads. This requires rhythm, patience, and a lot of practice but the feeling of finally clearing a tough level is worth it.
+Flip Bros Unblocked lets you enjoy the full game directly in your browser with no downloads, no ads, and no restrictions, even on school or work networks. It’s lightweight, runs smoothly on Chromebooks, PCs, and mobile browsers, and is one of the most fun GitHub.io unblocked games you can play today.
+</p><h2>✨ Game Features Flip Bros</h2><p>TFlip Bros Unblocked stands out for its unique and challenging gameplay mechanics. Instead of running or walking, your character moves entirely through flips, creating a fun and unpredictable experience each time you play. Every movement is driven by physics the way you land, bounce, or launch yourself depends on your timing and momentum. This physics-based control system makes every jump feel dynamic and rewarding once mastered. Each level is designed with clever layouts and different enemy patterns, ensuring that no two stages ever feel the same. Since Flip Bros Unblocked runs directly on GitHub.io, you can start playing instantly without downloads, ads, or login requirements. Best of all, it’s fully unblocked, meaning you can enjoy smooth, safe gameplay anywhere at school, work, or home on Chromebooks, PCs, or mobile devices. Whether you’re a casual gamer or someone who loves mastering tricky mechanics, Flip Bros Unblocked offers endless replay value and pure flipping fun.</p><h3>⚙️ Flipping Techniques & Tips/h3><ul><li>Basic Jump: Press both flip keys at once to perform a straight vertical jump.</li><li>Directional Jump: Hold one flip key, then tap the opposite one to jump in that direction.</li><li>Mid-Air Flips: Use quick taps to slightly adjust your position while in the air.</li><li>Timing Is Everything: Wait for the right moment before jumping into enemies; one wrong flip can send you flying off the screen!</li></ul><h2>🕹️ How to Play Flip Bros</h2><p>Playing Flip Bros Unblocked is simple to learn but challenging to master. Your character moves by flipping rather than walking, which makes timing and control extremely important. Use the A key to flip left and the D key to flip right pressing both at the same time will make your character jump straight upward. Each flip affects your momentum, so learning how to control the arc of your jumps is the key to success. Your main goal in every level is to defeat all the enemies by landing precisely on their heads. If you collide with them from the side or below, you’ll take damage and have to restart. As you progress, the levels become trickier with tighter spaces, moving platforms, and faster enemies that test your precision. Flip Bros Unblocked rewards patience and quick reflexes, offering players the thrill of mastering perfect timing through clever physics and satisfying chain stomps. Since it runs directly on GitHub.io, there’s no need to download or install anything just open your browser, flip into action, and enjoy smooth gameplay anywhere, anytime.</p>
             <div class="game-features">
                 <h3>Categories</h3>
                 <div class="game-category-tags">
@@ -699,8 +701,8 @@ class="category-tag-item" style="background-color: #FF3D00;">
         <div class="container">
    <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Only Sz Games</h3>
-                    <p>Looking for your favorite Only Sz Games? Play them all right here, completely unblocked, even at school or work. Just click and play instantly—no downloads required.</p>
+                    <h3>FAF Games</h3>
+                    <p>Looking for your favorite FAF Games? You’re in the right place! Play a huge collection of unblocked games anytime, anywhere even at school or work. Just click, load, and start playing instantly no downloads, no limits, just nonstop fun!</p>
                     <div class="social-icons">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -712,7 +714,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
 
             <div class="footer-bottom">
                 <p>&copy;
-<span id="currentYear"></span> Only Sz Games. All rights reserved.</p>
+<span id="currentYear"></span> FAF Games. All rights reserved.</p>
                 <div class="footer-links">
                     <a href="/privacy-policy">Privacy Policy</a>
                     <a href="/contact">Contact Us</a>
